<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/baseline_menu_24"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/menu"
                android:onClick="onMenuClick" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/question_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:src="@drawable/baseline_cameraswitch_24"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/question_mark"
                android:onClick="onChangeCameraClick" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:padding="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_button"
                style="?android:attr/buttonBarButtonStyle"
                app:icon="@drawable/baseline_text_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/money_button"
                app:icon="@drawable/baseline_money_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/money"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/item_button"
                app:icon="@drawable/baseline_object_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/item"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/product_button"
                app:icon="@drawable/baseline_product_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/distance_button"
                app:icon="@drawable/baseline_distance_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/distance"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/face_button"
                app:icon="@drawable/baseline_face_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/face"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />

            <com.google.android.material.button.MaterialButton
                style="?android:attr/buttonBarButtonStyle"
                app:icon="@drawable/baseline_add_face_24"
                app:iconSize="36dp"
                app:iconTint="@color/primary"
                android:layout_width="64dp"
                android:id="@+id/add_face_button"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_face"
                app:iconGravity="textStart"
                android:gravity="center"
                android:onClick="onButtonClick" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/bg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/voice_record_button"
        app:iconSize="36dp"
        app:iconTint="@color/primary"
        android:layout_width="400dp"
        android:layout_height="680dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="96dp"
        />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/screenshot"
        android:src="@drawable/baseline_circle_24"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onCaptureClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>